SERVER-12195 Text matcher should parse doc in doc language

This fixes the issue that the text matcher was incorrectly parsing
the document in the search language.